# tau

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PHASE1_PROMPT.md  PHASE2_PROVIDERS_PROMPT.md  PHASE2_TOOLS_PROMPT.md  PHASE2_TUI_PROMPT.md  README.md  SUMMARY.md
crates/tau-cli/: Cargo.toml
crates/tau-cli/src/: errors.rs  main.rs
crates/tau-computer-use/: Cargo.toml
crates/tau-computer-use-layout/: Cargo.toml
crates/tau-computer-use-layout/src/: lib.rs
crates/tau-computer-use-layout/tests/: layout.rs
crates/tau-computer-use/src/: lib.rs  overlay.rs  visuals.rs
crates/tau-computer-use/tests/: computer_use.rs
crates/tau-core/: Cargo.toml
crates/tau-core/src/: agent.rs  errors.rs  lib.rs  session.rs  tool.rs
crates/tau-core/src/display/: markdown.rs  mod.rs  tables.rs  tools.rs
crates/tau-core/tests/: session.rs
crates/tau-desktop-capture/: Cargo.toml
crates/tau-desktop-capture/src/: lib.rs
crates/tau-desktop-capture/tests/: capture.rs
crates/tau-llm/: Cargo.toml
crates/tau-llm/src/: lib.rs
crates/tau-providers/: Cargo.toml  INTEGRATION.md
crates/tau-providers/src/: anthropic.rs  errors.rs  lib.rs  openai_chat.rs  openai_responses.rs
crates/tau-providers/tests/: anthropic.rs  openai_chat.rs  openai_responses.rs
crates/tau-providers/tests/fixtures/: anthropic_tool.sse  openai_chat_tool.sse  openai_responses_tool.sse
crates/tau-tools/: Cargo.toml  INTEGRATION.md
crates/tau-tools/src/: errors.rs  lib.rs
crates/tau-tools/tests/: tools.rs
crates/tau-tui/: Cargo.toml  INTEGRATION.md
crates/tau-tui/src/: lib.rs
scripts/: install.sh
