[workspace]
members = [
    "crates/tau-core",
    "crates/tau-llm",
    "crates/tau-providers",
    "crates/tau-tools",
    "crates/tau-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
eventsource-stream = "0.2"
futures = "0.3"
nix = { version = "0.29", features = ["signal", "process"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
