[package]
name = "tau-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-core = { path = "../tau-core" }
tau-llm = { path = "../tau-llm" }
tau-providers = { path = "../tau-providers" }
tau-tools = { path = "../tau-tools" }
tau-tui = { path = "../tau-tui" }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
